@@ -4,6 +4,7 @@ import java.io.File
 import java.nio.file.Files
 import java.util.Properties
 import scala.collection.mutable.ListBuffer
+import scala.util.control.NoStackTrace
 
 lazy val V =
   new {
@@ -249,7 +250,7 @@ lazy val packagehub = project
       List(
         "com.google.cloud.sql" % "postgres-socket-factory" % "1.3.3",
         "com.zaxxer" % "HikariCP" % "5.0.0",
-        "org.flywaydb" % "flyway-core" % "7.15.0",
+        "org.flywaydb" % "flyway-core" % "8.0.1",
         "org.postgresql" % "postgresql" % "42.3.0",
         "org.rauschig" % "jarchivelib" % "1.2.0",
         "org.scalameta" %% "scalameta" % V.scalameta,
@@ -271,12 +272,9 @@ commands +=
 
 def minimizedSourceDirectory =
   file("tests/minimized/src/main/java").getAbsoluteFile
-lazy val minimizedSettings = List[Def.Setting[_]](
-  autoScalaLibrary := false,
-  (publish / skip) := true,
-  (run / fork) := true,
-  (Compile / unmanagedSourceDirectories) += minimizedSourceDirectory,
-  (Compile / javacOptions) ++=
+
+def semanticdbCompileOptions =
+  Def.setting {
     List[String](
       s"-Arandomtimestamp=${System.nanoTime()}",
       List(
@@ -288,6 +286,13 @@ lazy val minimizedSettings = List[Def.Setting[_]](
         s"-targetroot:${(Compile / semanticdbTargetRoot).value}"
       ).mkString(" ")
     )
+  }
+lazy val minimizedSettings = List[Def.Setting[_]](
+  autoScalaLibrary := false,
+  (publish / skip) := true,
+  (run / fork) := true,
+  (Compile / unmanagedSourceDirectories) += minimizedSourceDirectory,
+  (Compile / javacOptions) ++= semanticdbCompileOptions.value
 )
 
 lazy val minimized = project
@@ -302,12 +307,65 @@ lazy val minimized8 = project
   .dependsOn(agent, plugin)
   .disablePlugins(JavaFormatterPlugin)
 
-lazy val minimized15 = project
-  .in(file("tests/minimized/.j15"))
+def javaModuleExports =
+  List(
+    "-J--add-exports",
+    "-Jjdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+    "-J--add-exports",
+    "-Jjdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+    "-J--add-exports",
+    "-Jjdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+    "-J--add-exports",
+    "-Jjdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+    "-J--add-exports",
+    "-Jjdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+  )
+
+def compileWithJava17 =
+  Def.task {
+    val args = ListBuffer.empty[String]
+    val javaSources = (minimized8 / Compile / sources)
+      .value
+      .map(_.getAbsolutePath)
+    val javac = (Compile / javaHome)
+      .value
+      .get
+      .toPath
+      .resolve("bin")
+      .resolve("javac")
+      .toString
+    val compileClasspath = List(
+      "-classpath",
+      (Compile / dependencyClasspath)
+        .value
+        .map(_.data.getAbsolutePath)
+        .mkString(java.io.File.pathSeparator)
+    )
+    val outputDirectory = (Compile / classDirectory).value
+    IO.delete(outputDirectory)
+
+    args += javac
+    args ++= javaModuleExports
+    args ++= List("-d", outputDirectory.getAbsolutePath)
+    args ++= semanticdbCompileOptions.value
+    args ++= compileClasspath
+    args ++= javaSources
+    val exit = scala.sys.process.Process(args.toList).!
+    if (exit != 0) {
+      throw new RuntimeException("javac compilation failed") with NoStackTrace
+    }
+  }
+
+lazy val minimized17 = project
+  .in(file("tests/minimized/.j17"))
   .settings(
     minimizedSettings,
-    javaToolchainVersion := "15",
-    Compile / javaHome := None
+    Compile / sources := Nil,
+    javaToolchainJvmIndex :=
+      Some("https://github.com/coursier/jvm-index/blob/master/index.json"),
+    javaToolchainVersion := "temurin:17",
+    Compile / compile :=
+      (Compile / compile).dependsOn(compileWithJava17).value
   )
   .dependsOn(agent, plugin)
   .disablePlugins(JavaFormatterPlugin)
